--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -24,6 +24,9 @@ a {
   color: #300000;
 }
 
+a:hover {
+}
+
 a:visited {
   color: #300000;
 }
@@ -64,7 +67,6 @@ pre code {
 ins {
   text-decoration: none;
 }
-
 del {
   text-decoration: line-through;
 }
@@ -91,7 +93,7 @@ table {
   height: 51px;
   text-indent: -9999px;
   text-decoration: none;
-  background: url(/images/rubygems.png);
+  background: url(/images/rubygems.png)
 }
 
 .main {
@@ -183,8 +185,8 @@ table {
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
   background-repeat: repeat-x;
-  color: rgba(0, 0, 0, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0,0,0,.8);
+  border: 1px solid rgba(0,0,0,.2);
   border-top: none;
   border-bottom: none;
   margin-bottom: 16px;
@@ -214,8 +216,8 @@ table {
   margin: 0;
   font-size: 2.4em;
   color: #000;
-  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.2);
-  background: url("/images/instructions.png");
+  text-shadow: 1px 1px 1px rgba(255,255,255,0.2);
+  background: url('/images/instructions.png');
   padding-top: 12px;
   height: 310px;
 }
@@ -233,8 +235,8 @@ table {
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
   background-repeat: repeat-x;
-  color: rgba(0, 0, 0, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0,0,0,.8);
+  border: 1px solid rgba(0,0,0,.2);
   border-top: none;
   border-bottom: none;
   margin-bottom: 16px;
@@ -289,8 +291,8 @@ table {
 .main .info ol.instructions li {
   background-repeat: repeat-x;
   line-height: 4em;
-  color: rgba(0, 0, 0, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0,0,0,.8);
+  border: 1px solid rgba(0,0,0,.2);
   border-top: none;
   border-bottom: none;
   height: 89px;
@@ -321,7 +323,7 @@ table {
   padding-left: 10px;
   padding-right: 50px;
   float: left;
-  background: url("/images/arrow.png") no-repeat 85% 52%;
+  background: url('/images/arrow.png') no-repeat 85% 52%;
 }
 
 .main .info ol.instructions li span {
@@ -336,17 +338,17 @@ table {
   margin-left: 36px;
   margin-right: 36px;
   margin-bottom: 24px;
-  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.2);
+  text-shadow: 1px 1px 1px rgba(255,255,255,0.2);
   background: #FFF;
   padding: 3px;
 }
 
 .main .info .border .background {
-  background: url("/images/instructions.png") repeat 0 -82px;
+  background: url('/images/instructions.png') repeat 0 -82px;
 }
 
 .main .info .border .install {
-  background: #ece5d6 url("/images/install.png") repeat-x;
+  background: #ECE5D6 url('/images/install.png') repeat-x;
   padding: 12px;
   font-size: 2.4em;
   color: #000;
@@ -385,8 +387,8 @@ table {
 .main .info .install .instructions {
   background-repeat: repeat-x;
   background-color: #AD4;
-  background-image: url("/images/go.png");
-  color: rgba(0, 0, 0, 0.8);
+  background-image: url('/images/go.png');
+  color: rgba(0,0,0,.8);
   height: 90px;
 }
 
@@ -400,7 +402,7 @@ table {
   padding-left: 10px;
   padding-right: 50px;
   float: left;
-  background: url("/images/arrow.png") no-repeat 85% 52%;
+  background: url('/images/arrow.png') no-repeat 85% 52%;
   line-height: 90px;
 }
 
@@ -475,27 +477,27 @@ table {
 }
 
 .main .info .meta .admin #edit {
-  background: url("/images/edit.png") no-repeat;
+  background: url('/images/edit.png') no-repeat;
 }
 
 .main .info .meta .admin #subscribe {
-  background: url("/images/subscribe.png") no-repeat;
+  background: url('/images/subscribe.png') no-repeat;
 }
 
 .main .info .meta .admin #unsubscribe {
-  background: url("/images/unsubscribe.png") no-repeat;
+  background: url('/images/unsubscribe.png') no-repeat;
 }
 
 .main .info .meta .admin #download {
-  background: url("/images/download.png") no-repeat;
+  background: url('/images/download.png') no-repeat;
 }
 
 .main .info .meta .admin #docs {
-  background: url("/images/docs.png") no-repeat;
+  background: url('/images/docs.png') no-repeat;
 }
 
 .main .info .meta .admin #stats {
-  background: url("/images/metrics.png") no-repeat;
+  background: url('/images/metrics.png') no-repeat;
 }
 
 .main .info .meta .stat-versions a {
@@ -522,6 +524,7 @@ table {
 .main .info #markup ul {
   list-style: inside disc;
 }
+
 
 .main .info p {
   color: #5e543e;
@@ -579,7 +582,7 @@ table {
 }
 
 .main .info .leaderboards ol li a {
-  background: #ece5d6 url("/images/leaderboard.png") repeat-x;
+  background: #ECE5D6 url('/images/leaderboard.png') repeat-x;
   padding: 7px;
   font-size: 0.8em;
   font-weight: 900;
@@ -757,7 +760,7 @@ table {
 }
 
 .main .info .directory ol {
-  background: url("/images/directory.png") repeat-x;
+  background: url('/images/directory.png') repeat-x;
   padding: 18px 0;
   margin: 0;
   text-align: center;
@@ -774,7 +777,7 @@ table {
 }
 
 .main .info .directory li a:hover {
-  background: url("/images/letter.png") repeat-x 0 16px;
+  background: url('/images/letter.png') repeat-x 0 16px;
 }
 
 .main .info .gems ol {
@@ -787,7 +790,7 @@ table {
   padding: 8px;
   padding-left: 1.8em;
   border-top: 1px solid #B4AC99;
-  background: url("/images/bullet-directory.png") no-repeat 10px 14px;
+  background: url('/images/bullet-directory.png') no-repeat 10px 14px;
 }
 
 .main .info .gems ol li:first-child {
@@ -795,7 +798,7 @@ table {
 }
 
 .main .info .gems ol li:hover {
-  background: white url("/images/bullet-directory.png") no-repeat 10px 14px;
+  background: #fff url('/images/bullet-directory.png') no-repeat 10px 14px;
 }
 
 .main .info .gems ol li a {
@@ -931,6 +934,7 @@ table {
 }
 
 /* Forms */
+
 .main .info form {
   margin: 1.5em 36px;
   color: #5e543e;
@@ -976,7 +980,7 @@ label, .form_links {
 .text_field,
 .password_field,
 .url_field {
-  margin: 0 0 15px 0;
+ margin: 0 0 15px 0;
 }
 
 .text_field input,
@@ -1034,6 +1038,7 @@ label, .form_links {
 .edit_user .avatar_field label {
   margin-top: 25px;
   margin-right: 25px;
+
 }
 
 .edit_user .avatar_field a {
@@ -1080,22 +1085,22 @@ input[type='submit'] {
   -webkit-border-radius: 4px;
   border-radius: 4px;
   border: 1px solid #a1100a;
-  background-image: -moz-linear-gradient(bottom, #690900 0%, #8f0e00 49%, #a41200 50%, #cf1900 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1, #690900), color-stop(0.5, #8f0e00), color-stop(0.49, #a41200), color-stop(0, #cf1900));
+  background-image: -moz-linear-gradient(bottom, #690900 0%, #8f0e00 49%,  #a41200 50%, #cf1900 100%);
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(1, #690900),color-stop(.5, #8f0e00),color-stop(.49, #a41200),color-stop(0, #cf1900));
 }
 
 .edit_user .avatar_field a:hover,
 input[type='submit']:hover {
-  background-image: -moz-linear-gradient(bottom, #690900 0%, #8f0e00 49%, #a41200 50%, red 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1, #690900), color-stop(0.5, #8f0e00), color-stop(0.49, #a41200), color-stop(0, red));
+  background-image: -moz-linear-gradient(bottom, #690900 0%, #8f0e00 49%,  #a41200 50%, #f00 100%);
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(1, #690900),color-stop(.5, #8f0e00),color-stop(.49, #a41200),color-stop(0, #f00));
 }
 
 /* Rails Flash, Forms, Etc */
 #flash-border {
   background: #000;
   padding: 5px;
-  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
-  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+  -webkit-box-shadow: 0 1px 0 rgba(255,255,255,.2);
+  -moz-box-shadow: 0 1px 0 rgba(255,255,255,.2);
   margin: -20px 0 20px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -1113,9 +1118,9 @@ input[type='submit']:hover {
   border-radius: 4px;
   padding: 0 10px;
   background: url(/images/flash.jpg) repeat-x;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
-  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.25);
+  -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.25);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.25);
   height: 45px;
   line-height: 47px;
 }
@@ -1129,21 +1134,21 @@ input[type='submit']:hover {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 2px rgba(0, 0, 0, 0.7);
-  -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 2px rgba(0, 0, 0, 0.7);
-  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 1px 2px rgba(0, 0, 0, 0.7);
+  -webkit-box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 1px 2px rgba(0,0,0,.7);
+  -moz-box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 1px 2px rgba(0,0,0,.7);
+  box-shadow: 0 1px 0 rgba(255,255,255,.2), inset 0 1px 2px rgba(0,0,0,.7);
 }
 
 #flash_success span {
-  background: rgba(0, 0, 0, 0.2) url(/images/flash-success.png) 7px 6px no-repeat;
+  background: rgba(0,0,0,.2) url(/images/flash-success.png) 7px 6px no-repeat;
 }
 
 #flash_notice span {
-  background: rgba(0, 0, 0, 0.2) url(/images/flash-notice.png) 7px 6px no-repeat;
+  background: rgba(0,0,0,.2) url(/images/flash-notice.png) 7px 6px no-repeat;
 }
 
 #flash_failure span {
-  background: rgba(0, 0, 0, 0.2) url(/images/flash-error.png) 7px 6px no-repeat;
+  background: rgba(0,0,0,.2) url(/images/flash-error.png) 7px 6px no-repeat;
 }
 
 #announcement {
@@ -1225,6 +1230,9 @@ input[type='submit']:hover {
   text-shadow: 0 0 3px #000000;
 }
 
+.entries {
+}
+
 /* New Nav Stuff - Fred Yates */
 .nav {
   position: relative;
@@ -1244,6 +1252,7 @@ input[type='submit']:hover {
   height: 46px;
   background: url(/images/nav.png) 0 0 no-repeat;
 }
+
 
 #nav #user-info {
   float: left;
@@ -1399,6 +1408,9 @@ form#main-search input[type="submit"] {
   margin-right: 23px;
 }
 
+#profile-left {
+}
+
 #avatar-frame {
   margin-left: -5px;
   float: left;
@@ -1409,7 +1421,7 @@ form#main-search input[type="submit"] {
   -webkit-border-radius: 7px;
   border-radius: 7px;
   background-image: -moz-linear-gradient(bottom, #151312 0%, #534a45 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(1, #151312), color-stop(0, #534a45));
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(1, #151312),color-stop(0, #534a45));
 }
 
 #profile-info {
@@ -1511,22 +1523,19 @@ h5#downloads {
   border-radius: 7px;
   -moz-border-radius: 7px;
   margin-bottom: 10px;
+
   /* http://www.colorzilla.com/gradient-editor/ */
-  background: #930000;
-  /* old browsers */
-  background: -moz-linear-gradient(top, #930000 1%, #730000 17%, #690000 18%, #4e0000 100%);
-  /* firefox */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #930000), color-stop(17%, #730000), color-stop(18%, #690000), color-stop(100%, #4e0000));
-  /* webkit */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#930000', endColorstr='#4E0000',GradientType=0 );
-  /* ie */
+  background: #930000; /* old browsers */
+  background: -moz-linear-gradient(top, #930000 1%, #730000 17%, #690000 18%, #4E0000 100%); /* firefox */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#930000), color-stop(17%,#730000), color-stop(18%,#690000), color-stop(100%,#4E0000)); /* webkit */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#930000', endColorstr='#4E0000',GradientType=0 ); /* ie */
 }
 
 .main .info .profile-list ol li a.profile-rubygem em {
   color: #fa6969;
   font-size: 17px;
   font-style: normal;
-  text-shadow: 0 -1px 3px black;
+  text-shadow: 0 -1px 3px #000000;
 }
 
 .main .info .profile-list ol li a.profile-downloads {
@@ -1535,7 +1544,7 @@ h5#downloads {
   font-size: 13px;
   text-align: right;
   display: inline-block;
-  text-shadow: 0 -1px 3px black;
+  text-shadow: 0 -1px 3px #000000;
   vertical-align: top;
   padding-top: 5px;
   width: 178px;
@@ -1546,14 +1555,10 @@ h5#downloads {
 }
 
 .main .info .profile-list ol li .profile-graph {
-  background: #1D0000;
-  /* old browsers */
-  background: -moz-linear-gradient(top, #1d0000 1%, #360000 10%, #2f0000 100%);
-  /* firefox */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #1d0000), color-stop(10%, #360000), color-stop(100%, #2f0000));
-  /* webkit */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1D0000', endColorstr='#2F0000',GradientType=0 );
-  /* ie */
+  background: #1D0000; /* old browsers */
+  background: -moz-linear-gradient(top, #1D0000 1%, #360000 10%, #2F0000 100%); /* firefox */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#1D0000), color-stop(10%,#360000), color-stop(100%,#2F0000)); /* webkit */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1D0000', endColorstr='#2F0000',GradientType=0 ); /* ie */
   height: 115px;
   margin: 10px 4px;
   /*-moz-border-radius: 0 0 7px 7px;
@@ -1566,6 +1571,7 @@ h5#downloads {
   height: 50px;
 }
 
+
 .profile-list ol li a.profile-rubygem {
   padding: 13px 7px 7px;
   vertical-align: top;
@@ -1577,7 +1583,7 @@ h5#downloads {
   overflow: hidden;
   height: 21px;
   line-height: 23px;
-  text-shadow: 0 -2px 3px black;
+  text-shadow: 0 -2px 3px #000000;
   letter-spacing: 0.5px;
 }
 
@@ -1588,16 +1594,17 @@ h5#downloads {
   border: 1px solid #cccccc;
   margin: 12px 36px 2px 2px;
   color: #a00;
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
 }
 
 #edit-profile {
-  background: url("/images/edit.png") no-repeat;
+  background: url('/images/edit.png') no-repeat;
   margin: 10px 0 8px 1px;
   font-size: 15px;
   font-weight: bold;
   padding-left: 24px;
 }
+
